@@ -28,5 +28,10 @@ this repository contains the full copyright notices and license terms. -->
     <field name="storage_location"/>
     <label name="picking_location"/>
     <field name="picking_location"/>
+
+    <label name="lost_found_location"/>
+    <field name="lost_found_location"/>
+    <newline/>
+
     <field name="childs" colspan="4"/>
 </form>
